Fix centered fill view logic to avoid content overlapping

--- a/src/ui/components/FillView/styles.module.css
+++ b/src/ui/components/FillView/styles.module.css
@@ -1,3 +1,11 @@
 .adjustForNavigationBar > * {
   margin-top: calc(0px - var(--navigation-bar-height));
 }
+
+.hideScrollbar {
+  scrollbar-width: none;
+}
+
+.hideScrollbar::-webkit-scrollbar {
+  display: none;
+}
